option('build_tests',			type: 'boolean', value: true,	description: 'Build tests')
option('build_examples',		type: 'boolean', value: true,	description: 'Build examples')
option('pedantic',				type: 'boolean', value: true,	description: 'Pedantic build mode.')
option('coverage',				type: 'feature', value: 'auto',	description: 'Instrument the tests for clang source-based coverage')
